[package]
name = "glimpse"
version = "0.1.0"
edition = "2021"

[dependencies]

wayland-client = "0.31.10"
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
tempfile = "3.20.0"
memmap2 = "0.9.7"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4.27"
env_logger = "0.11.8"
bytemuck = "1.23.1"
